# psw

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  workflow.yml
src/psw/: __init__.py  __main__.py  cli.py  stopwatch.py  timer.py  utils.py
tests/: test_build_workflow.py  test_cli.py  test_readme.py  test_timer.py
