[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psw-ko"
version = "0.1.2"
description = "A lightweight CLI stopwatch and timer in Python"
readme = "README.md"
requires-python = ">=3.8"
# external libraries
dependencies = []

[project.scripts]
# psw in command calls main function in cli.py
psw = "psw.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]